# Jazz-linter

./: Cargo.toml  README.md  test-linter.sh
js/: index.js
src/: lib.rs  main.rs  utils.rs
src/rules/: mod.rs  no_unused_variables.rs  use_const.rs
