
[lib]
crate-type = ["cdylib", "rlib"]


[package]
name = "Jazz-linter"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_common = "0.37.5"
swc_ecma_parser = "0.149.1"
wasm-bindgen = "0.2"
swc_core = "0.103.2"
swc_ecma_transforms = "0.240.0"
swc_ecma_visit = "0.104.8"
swc_ecma_ast ="0.118.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "3.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true

[build]
target = "wasm32-unknown-unknown"
